--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: 统数视界
-description: math icu
+description: > # this means to ignore newlines until "baseurl:"
+  math icu
