--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ theme: jekyll-theme-minimal
 title: 统数视界
 description: > # this means to ignore newlines until "baseurl:"
   math icu
+
+# social links
+twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
