--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: 统数视界
 description: > # this means to ignore newlines until "baseurl:"
   math icu
 logo: wx.jpg
-github:
-  repository_nwo: github/opensource.guide
+github: '//github.com/kaeyleo'
+  
