--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ description: > # this means to ignore newlines until "baseurl:"
 logo: wx.jpg
 github: '//github.com/kaeyleo'
 mathjax: true
+markdown: kramdown
   
