--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,6 @@ description: > # this means to ignore newlines until "baseurl:"
   math icu
 logo: wx.jpg
 github: '//github.com/kaeyleo'
+markdown: kramdown
 
   
