--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-modernist
 title: 统数视界
 description: > # this means to ignore newlines until "baseurl:"
   微信扫描二维码，关注公众号
