--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 theme: jekyll-theme-modernist
 title: 统数视界
 description: > # this means to ignore newlines until "baseurl:"
-  微信扫描二维码，关注公众号
+  微信搜索“统数视界”，关注公众号。
 logo: wx.jpg
-github: '//github.com/kaeyleo'
+github: 'https://mathicu.github.io/index'
 markdown: kramdown
 
   
