--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ description: > # this means to ignore newlines until "baseurl:"
 logo: wx.jpg
 github: 'https://mathicu.github.io/index'
 markdown: kramdown
+show_downloads: true
 
   
