--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,9 @@ logo: wx.jpg
 github: 'https://mathicu.github.io/index'
 markdown: kramdown
 show_downloads: true
+github:
+  zip_url: http://example.com/download.zip
+  another_url: another value
+
 
   
