--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ show_downloads: true
 github:
   zip_url: https://mathicu.github.io/wjf
   tar_url: https://mathicu.github.io/gltj
-  repository_url: https://mathicu.github.io/线性代数
+  repository_url: https://mathicu.github.io/xxds
 
 
   
