--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ show_downloads: true
 github:
   home_url: https://mathicu.github.io/
   zip_url: https://mathicu.github.io/wjf
-  tar_url: https://mathicu.github.io/gltj
-  repository_url: https://mathicu.github.io/xxds
+  tar_url: https://mathicu.github.io/xxds
+  repository_url: https://mathicu.github.io/gltj
 
 
   
