--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-modernist
 title: 统数视界
 description: > # this means to ignore newlines until "baseurl:"
   微信搜索“统数视界”，关注公众号。
-logo: wx.jpg
+logo: pics/wx.jpg
 github: 'https://mathicu.github.io/index'
 markdown: kramdown
 show_downloads: true
