--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ github:
   home_url: https://mathicu.github.io/
   zip_url: https://mathicu.github.io/wjf
   tar_url: https://mathicu.github.io/xxds
+  tar_url: https://mathicu.github.io/kysx
   repository_url: https://mathicu.github.io/gltj
 
 
