--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-modernist
 title: MathICU
 description: > # this means to ignore newlines until "baseurl:"
-  MathICU, math ICU.
+#MathICU, math ICU.
 logo: pics/wx.jpg
 github: 'https://mathicu.github.io/index'
 markdown: kramdown
